<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".ucuncuyol.DetailFragment">

    <ImageView
        android:id="@+id/refresIvDetailFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:src="@drawable/refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sehirTVDetailFragment"
        style="@style/medium_20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/sehir"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refresIvDetailFragment" />

    <TextView
        android:id="@+id/gunTVDetailFragment"
        style="@style/regular_14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gun"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sehirTVDetailFragment" />

    <ImageView
        android:id="@+id/sunnyIVDetailFragment"
        android:layout_width="@dimen/margin_64dp"
        android:layout_height="@dimen/margin_64dp"
        android:layout_marginTop="@dimen/margin_64dp"
        android:src="@drawable/ic_sunny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gunTVDetailFragment" />

    <TextView
        android:id="@+id/derece1TVDetailFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:gravity="center"
        android:text="@string/derece"
        android:textColor="@color/purple_700"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunnyIVDetailFragment" />

    <TextView
        android:id="@+id/gunesliTVDetailFragment"
        style="@style/medium_16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/hava_durumu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/derece1TVDetailFragment" />

    <TextView
        android:id="@+id/ruzgarTVDetailFragment"
        style="@style/medium_14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/ruzgar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gunesliTVDetailFragment" />

    <ImageView
        android:id="@+id/windIVDetailFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:src="@drawable/ic_wind"
        app:layout_constraintEnd_toStartOf="@+id/hizTVDetailFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ruzgarTVDetailFragment" />

    <TextView
        android:id="@+id/hizTVDetailFragment"
        style="@style/regular_14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="165dp"
        android:padding="5dp"
        android:text="@string/ruzgar_hizi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/windIVDetailFragment"
        app:layout_constraintTop_toBottomOf="@+id/ruzgarTVDetailFragment" />


    <TextView
        android:id="@+id/saliTvFragment"
        style="@style/regular_14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="80dp"
        android:text="@string/sali"
        app:layout_constraintBottom_toTopOf="@+id/carsambaTvFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hizTVDetailFragment" />

    <TextView
        android:id="@+id/carsambaTvFragment"
        style="@style/regular_14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:text="@string/carsamba"
        app:layout_constraintBottom_toTopOf="@+id/persembeTvFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saliTvFragment" />

    <TextView
        android:id="@+id/persembeTvFragment"
        style="@style/regular_14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:text="@string/persembe"
        app:layout_constraintBottom_toTopOf="@+id/cumaTvFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carsambaTvFragment" />

    <TextView
        android:id="@+id/cumaTvFragment"
        style="@style/regular_14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:text="@string/cuma"
        app:layout_constraintBottom_toTopOf="@+id/verileriGuncelleFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/persembeTvFragment" />

    <ImageView
        android:id="@+id/sunny2IvFragment"
        android:layout_width="@dimen/margin_24dp"
        android:layout_height="@dimen/margin_24dp"
        android:src="@drawable/ic_sunny"
        app:layout_constraintBottom_toTopOf="@+id/rainIvFragment"
        app:layout_constraintEnd_toStartOf="@+id/dereceAraligi3TVDetailFragment"
        app:layout_constraintStart_toEndOf="@+id/persembeTvFragment"
        app:layout_constraintTop_toBottomOf="@+id/cloudIvFragment" />

    <ImageView
        android:id="@+id/cloudIvFragment"
        android:layout_width="@dimen/margin_24dp"
        android:layout_height="@dimen/margin_24dp"
        android:src="@drawable/ic_cloudy"
        app:layout_constraintBottom_toTopOf="@+id/sunny2IvFragment"
        app:layout_constraintEnd_toStartOf="@+id/dereceAraligi2TVDetailFragment"
        app:layout_constraintStart_toEndOf="@+id/carsambaTvFragment"
        app:layout_constraintTop_toBottomOf="@+id/sunnyIvFragment" />

    <ImageView
        android:id="@+id/sunnyIvFragment"
        android:layout_width="@dimen/margin_24dp"
        android:layout_height="@dimen/margin_24dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_sunny"
        app:layout_constraintBottom_toTopOf="@+id/cloudIvFragment"
        app:layout_constraintEnd_toStartOf="@+id/dereceAraligi1TVDetailFragment"
        app:layout_constraintStart_toEndOf="@+id/saliTvFragment"
        app:layout_constraintTop_toBottomOf="@+id/hizTVDetailFragment" />

    <ImageView
        android:id="@+id/rainIvFragment"
        android:layout_width="@dimen/margin_24dp"
        android:layout_height="@dimen/margin_24dp"
        android:src="@drawable/ic_rainy"
        app:layout_constraintBottom_toTopOf="@+id/verileriGuncelleFragment"
        app:layout_constraintEnd_toStartOf="@+id/dereceAraligi4TVDetailFragment"
        app:layout_constraintStart_toEndOf="@+id/cumaTvFragment"
        app:layout_constraintTop_toBottomOf="@+id/sunny2IvFragment" />

    <TextView
        android:id="@+id/dereceAraligi1TVDetailFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:text="@string/derece_araligi"
        app:layout_constraintBottom_toTopOf="@+id/dereceAraligi2TVDetailFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windIVDetailFragment" />

    <TextView
        android:id="@+id/dereceAraligi2TVDetailFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:text="@string/derece_araligi"
        app:layout_constraintBottom_toTopOf="@+id/dereceAraligi3TVDetailFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dereceAraligi1TVDetailFragment" />

    <TextView
        android:id="@+id/dereceAraligi3TVDetailFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:text="@string/derece_araligi"
        app:layout_constraintBottom_toTopOf="@+id/dereceAraligi4TVDetailFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dereceAraligi2TVDetailFragment" />

    <TextView
        android:id="@+id/dereceAraligi4TVDetailFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:text="@string/derece_araligi"
        app:layout_constraintBottom_toTopOf="@+id/verileriGuncelleFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dereceAraligi3TVDetailFragment" />

    <Button
        android:id="@+id/verileriGuncelleFragment"
        style="@style/medium_14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginRight="@dimen/margin_24dp"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/verileri_guncelle"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        app:strokeWidth = "1dp"
        app:cornerRadius = "@dimen/margin_16dp"
        app:strokeColor = "@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rainIvFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>